--- a/src/app/style/components/theme.scss
+++ b/src/app/style/components/theme.scss
@@ -11,11 +11,11 @@ body {
     #calculate {
         font-family: $nunito;
         .line {
-            div {
+            button {
                 border-left: 0.1rem solid #9E9E9E;
                 border-bottom: 0.1rem solid #9E9E9E;
             }
-            div:last-child {
+            button:last-child {
                 background: #EF5350;
                 color: white;
                 border-right: 0.1rem solid #9E9E9E;
